# transaction-api

./: .env  .env.tests  .gitignore  Dockerfile  Makefile  README.md  docker-compose.tests.yml  docker-compose.yml  pyproject.toml  requirements.txt
src/: main.py  settings.py
src/controllers/: report.py  transaction.py
src/core/: database.py  errors.py  logging.py  models.py  utils.py
src/transaction/: command.py  errors.py  repository.py  service.py
src/transaction/models/: access.py  dto.py
tests/: conftest.py  generators.py
tests/functional/: test_transactions.py  transactions.py
tests/integration/: test_service.py
tests/unit/: test_validator.py
