[tool.poetry]
name = "alterdata"
version = "0.1.0"
description = ""
authors = ["Adrian Gawron <adrian.gawron@o2.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = {extras = ["standard"], version = "^0.116.0"}
sqlalchemy = "^2.0.41"
pydantic-settings = "^2.10.1"
pytest = "^8.4.1"
psycopg2 = "^2.9.10"
uvicorn = "^0.35.0"


[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pytest-dotenv = "^0.5.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
env_files = [".env.tests"]
pythonpath = ["src"]